--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/Users/zmanderyoussef/Documents/FlutterApp/flutter_application_1/lib/firebase_options.dart
