--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   shared_preferences: ^2.0.8
+  firebase_messaging: ^14.7.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
