--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   shared_preferences: ^2.0.8
   firebase_messaging: ^14.7.10
+  url_launcher: ^6.2.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
