--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^2.0.8
   firebase_messaging: ^14.7.10
   url_launcher: ^6.2.4
+  animated_splash_screen: ^1.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
