--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_messaging: ^14.7.10
   url_launcher: ^6.2.4
   animated_splash_screen: ^1.3.0
+  fluttertoast: ^8.2.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
