--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 
-name: flutter_application_1
+name: sliti_auto
 description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -8,7 +8,7 @@ version: 0.0.1+1
 
 environment:
   sdk: '>=2.19.4 <4.0.0'
-
+package: com.zmandarus.slitiauto
 dependencies:
   flutter:
     sdk: flutter
@@ -23,6 +23,7 @@ dependencies:
   url_launcher: ^6.2.4
   animated_splash_screen: ^1.3.0
   fluttertoast: ^8.2.4
+  mailer: ^6.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
