--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   fluttertoast: ^8.2.4
   mailer: ^6.1.0
+  change_app_package_name: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
